--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">AppWidgetResize</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="time1">01:23</string>
+    <string name="time2">56:34:12</string>
     <string name="add_widget">Add widget</string>
-    <string name="app_widget_description">This is an app widget description</string>
+    <string name="app_widget_description">Test widget resizing</string>
 </resources>
