--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="time2">56:34:12</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">Test widget resizing</string>
+    <string name="start">Start</string>
 </resources>
